components/dialog/index.css
/* ... */
.spectrum-Dialog {
	/* Be a flexbox to allow a full sized content area that scrolls */
	display: flex;

	/* Allow 100% width, taking into account padding */
	box-sizing: border-box;

	/* Be no bigger than max-width,  but also be 90% if the viewport is smaller than max-width */
	inline-size: var(--mod-standard-dialog-max-width, var(--spectrum-standard-dialog-max-width));
	min-inline-size: var(--mod-standard-dialog-min-inline-size, var(--spectrum-standard-dialog-min-inline-size));
	max-inline-size: 100%;
	max-block-size: inherit;
	background-color: var(--spectrum-standard-dialog-background-color);
	outline: none;
	border-radius: var(--mod-standard-dialog-border-radius, var(--spectrum-standard-dialog-border-radius));

	.spectrum--large & {
		--spectrum-standard-dialog-spacing-edge-to-content: var(--spectrum-spacing-400);
	}
}

.spectrum-Dialog--sizeS {
	--spectrum-standard-dialog-max-width: var(--spectrum-standard-dialog-maximum-width-small);
	inline-size: var(--mod-standard-dialog-max-width-small, var(--spectrum-standard-dialog-max-width));
}

.spectrum-Dialog--sizeL {
	--spectrum-standard-dialog-max-width: var(--spectrum-standard-dialog-maximum-width-large);
	inline-size: var(--mod-standard-dialog-max-width-large, var(--spectrum-standard-dialog-max-width));
}

.spectrum-Dialog-hero {
	grid-area: hero;

	block-size: var(--mod-standard-dialog-min-hero-block-size, var(--spectrum-standard-dialog-min-hero-block-size));

	border-start-start-radius: var(--mod-standard-dialog-border-radius, var(--spectrum-standard-dialog-border-radius));
	border-start-end-radius: var(--mod-standard-dialog-border-radius, var(--spectrum-standard-dialog-border-radius));

	background-size: cover;
	background-position: center center;
	overflow: hidden;
}

/* Non-Dismissible Dialog (no close button) */
.spectrum-Dialog-grid {
	display: grid;
	grid-template-columns:
		var(--mod-standard-dialog-spacing-grid-padding, var(--spectrum-standard-dialog-spacing-grid-padding))
		auto
		1fr
		auto
		minmax(0, auto)
		var(--mod-standard-dialog-spacing-grid-padding, var(--spectrum-standard-dialog-spacing-grid-padding));
	grid-template-rows:
		auto
		var(--mod-standard-dialog-spacing-grid-padding, var(--spectrum-standard-dialog-spacing-grid-padding))
		auto
		1fr
		auto
		var(--mod-standard-dialog-spacing-grid-padding, var(--spectrum-standard-dialog-spacing-grid-padding));
	grid-template-areas:
		"hero hero    hero    hero        hero        hero"
		".    .       .       .           .           ."
		".    heading header  header      header      ."
		".    content content content     content     ."
		".    footer  footer  buttonGroup buttonGroup ."
		".    .       .       .           .           .";
	inline-size: 100%;
}

.spectrum-Dialog-heading {
	grid-area: heading;

	margin-block-start: 0;

	margin-inline-end: var(--mod-standard-dialog-spacing-title-to-header-content, var(--spectrum-standard-dialog-spacing-title-to-header-content));
	font-size: var(--mod-standard-dialog-heading-font-size, var(--spectrum-standard-dialog-heading-font-size));
	font-weight: var(--mod-standard-dialog-heading-font-weight, var(--spectrum-standard-dialog-heading-font-weight));
	font-style: var(--spectrum-standard-dialog-heading-font-style);
	font-family: var(--spectrum-standard-dialog-heading-font-family);
	line-height: var(--mod-standard-dialog-heading-line-height, var(--spectrum-standard-dialog-heading-line-height));
	color: var(--mod-standard-dialog-heading-text-color, var(--spectrum-standard-dialog-heading-text-color));
	outline: none; /* Hide focus outline */

	&.spectrum-Dialog-heading--noHeader {
		grid-area: heading-start / heading-start / header-end / header-end;
		padding-inline-end: 0;
	}

	/* Remove the default margin on the Typography elements in the heading */
	.spectrum-Heading {
		margin-block: 0;
	}
}

.spectrum-Dialog-header {
	grid-area: header;
	display: flex;
	inline-size: fit-content;
	max-inline-size: 100%;
	margin-block-end: var(--spectrum-standard-dialog-spacing-title-to-description);

	/* Without this, buttons will be stretched */
	align-items: center;
	justify-content: flex-end;

	box-sizing: border-box;

	outline: none; /* Hide focus outline around header */

	.spectrum-Body {
		/* additional header content should grow/shrink with the text. */
		min-inline-size: fit-content;

		/* Remove the default margin on the Typography in the header */
		margin-block: 0;
	}
}

.spectrum-Dialog-content {
	grid-area: content;
	box-sizing: border-box;

	/*
  v2 is currently worse, inputs that get focus rings get a slight clipping unless overflow: visible replaces this line
  we should think of a better way to handle this, see padding/margin below for fix
  */
	overflow-y: auto;
	-webkit-overflow-scrolling: touch;

	outline: none; /* Hide focus outline */
	font-size: var(--mod-standard-dialog-description-font-size, var(--spectrum-standard-dialog-description-font-size));
	font-weight: var(--mod-standard-dialog-description-font-weight, var(--spectrum-standard-dialog-description-font-weight));
	font-family: var(--spectrum-standard-dialog-description-font-family);
	font-style: var(--spectrum-standard-dialog-description-font-style);
	line-height: var(--mod-standard-dialog-description-line-height, var(--spectrum-standard-dialog-description-line-height));
	color: var(--mod-standard-dialog-description-text-color, var(--spectrum-standard-dialog-description-text-color));

	/* Remove the default margin on the Typography elements in the dialog's body content */
	.spectrum-Body {
		margin-block: 0;
	}
}
/* ... */

